# puppyplace-products-api

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  local.env  manage.py  pyproject.toml  pytest.ini
apps/categories/: models.py  serializers.py  urls.py  views.py
apps/categories/migrations/: 0001_initial.py
apps/products/: models.py  serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_auto_20210919_1443.py  0003_rename_avatarurl_product_avatar_url.py
apps/tests/: conftest.py  factories.py
apps/tests/categories/: conftest.py  test_views.py
apps/tests/products/: test_views.py
products_api/: settings.py  urls.py
